--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+.box{
+    width: 1270px;
+    height: 1000px;
+    margin: 0 auto;
+    background-color: rgb(20, 46, 63);
+}
+.title{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+}
+.title>p{
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
 h1{
     color: red ;
     text-align: center;
